Add gradle setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ modVersion=1.4.3
 modBaseName=ItemBlacklist
 forgeVersion=1.12.2-14.23.5.2838
 mcpVersion=stable_39
+org.gradle.java.home=C:/Program Files/OpenJDK_Hotspot_8u275/
